# gbandit-game

./: .dockerignore  .env  .envrc  .gitignore  .mcp.json  AGENTS.md  AGENTS.template.md  RAILWAY_DEPLOYMENT.md  README.md  TODO.md  docker-compose.yml  gbandit.json  gbandit.yaml  opencode.jsonc
.agents/skills/lobbies/: SKILL.md
.agents/skills/websockets/: SKILL.md
.claude/: settings.json  settings.local.json  settings.old.json
.claude/hooks/: block-raw-commands.sh  rebuild-on-stop.sh
.claude/skills/websockets/: SKILL.md
.codex/: config.toml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  dev-seed.sql
backend/migrations/: 20240101000000_example.up.sql  20240101000000_init.down.sql  20240101000000_init.up.sql
backend/src/: auth.rs  config.rs  errors.rs  extractors.rs  lib.rs  main.rs  sig.rs
backend/src/db/: mod.rs
backend/src/models/: user.rs
backend/src/routes/: me.rs
frontend/: .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: config.ts  index.css  main.tsx  router.ts
frontend/src/api/: session.ts
frontend/src/components/: SignOutButton.tsx  Spinner.tsx
frontend/src/lib/: api.ts  auth-context.tsx  auth.ts  error-reporter.ts  gbandit.ts  http.ts  loaders.ts
frontend/src/pages/: AuthLayout.tsx  Dashboard.tsx  Home.tsx  HomeLoggedIn.tsx  HomeLoggedOut.tsx  NotFound.tsx  RouteError.tsx
scripts/: bun.sh  cargo.sh  dc.sh  env.sh  init.sh  psql.sh  rebuild.sh  test.sh  worktree.sh
